Updating Web Page
Improve of apperance

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
     <div class="menuBar">
       <div class="bottonSeccion">
-        <a href="#who">Who am I?</a>
-        <a href="#tech">Technologies</a>
-        <a href="#port">Portfolio</a>
-        <a href="#serv">Services</a>
-        <a href="#where">Where you can find me?</a>
-        <a href="#contact">Contact me</a>
+        <a href="#who" class="optionsNav"><i class="fas fa-user-alt navIcon"></i><strong class="navText">Who am I?</strong></a>
+        <a href="#tech" class="optionsNav"><i class="fas fa-laptop-code navIcon"></i><strong class="navText">Technologies</strong></a>
+        <a href="#port" class="optionsNav"><i class="fas fa-suitcase navIcon"></i><strong class="navText">Portfolio</strong></a>
+        <a href="#serv" class="optionsNav"><i class="fas fa-hard-hat navIcon"></i><strong class="navText">Services</strong></a>
+        <a href="#where" class="optionsNav"><i class="fas fa-hands-helping navIcon"></i><strong class="navText">Meeting</strong></a>
+        <a href="#contact" class="optionsNav"><i class="fas fa-id-card navIcon"></i><strong class="navText">Contact me</strong></a>
       </div>
     </div>
 
@@ -24,13 +24,24 @@
         <h1 class="headerBodyTopH1"><em>Hi, I'm Yael</em></h1>
         <h2>App developer</h2>
       </center>
-
       <div>
-        <h3 class="headerBodyTop">Who I am?</h3>
-        <p class="textBodyTop">
-          Hello, I'am begin my carrer at FES Aragon that is part of UNAM's schools and my personal porpuse is become in professional
-          app developer and create applications to meet customer needs and improve the performance of her activities.
-        </p>
+        <div class="profile">
+          <img src="img/ProfileIMG.jpg" alt="YaelAramProfile" class="profileIMG">
+        </div>
+        <div class="profile">
+          <h3 class="headerBodyTop">Who I am?</h3>
+          <p class="textBodyTop">
+            Hello, I'am studying my carrer at FES Aragon that is part of UNAM's schools and my personal porpuse is become in professional
+            app developer and create applications to meet customer needs and improve the performance of her activities.
+          </p>
+          <p class="textBodyTop">
+            My favourite hobbies are play videogames, watch YouTube videos and learn about app development to improve my skills and so
+            improve the quality of the projects.
+          </p>
+          <p class="textBodyTop">
+            So I invite you to watch what I could do to help you.
+          </p>
+        </div>
       </div>
     </div>
 
@@ -42,30 +53,20 @@
         <br>
         <br>
         <h3>What technologies do I use?</h3>
-        <div class="technologies">
-          <p class="divText">Android</p>
-          <img src="img/androidIcon.png" alt="android-Icon">
-          <p class="textTech">App development at android with kotlin and java.</p>
-        </div>
-        <div class="technologies">
-          <p class="divText">Swift</p>
-          <img src="img/swiftIcon.png" alt="swift-Icon">
-          <p class="textTech">App development at swift 13 and objective-c.</p>
-        </div>
-        <div class="technologies">
-          <p class="divText">Xamarin</p>
-          <img src="img/xamarinIcon.png" alt="xamarin-Icon">
-          <p class="textTech">App development multiplataform with xamarin.</p>
-        </div>
-        <div class="technologies">
-          <p class="divText">React Native</p>
-          <img src="img/reactNativeIcon.png" alt="reactNative-Icon">
-          <p class="textTech">App development multiplataform with react native.</p>
-        </div>
-        <div class="technologies">
-          <p class="divText">Flutter</p>
-          <img src="img/flutterIcon.png" alt="flutter-Icon">
-          <p class="textTech">App development multiplataform with flutter.</p>
+        <br>
+        <div class="techCards">
+          <div class="technologies">
+            <img src="img/androidIcon.png" alt="android-Icon" class="techIMG">
+            <p class="divText">Android</p>
+          </div>
+          <div class="technologies">
+            <img src="img/swiftIcon.png" alt="swift-Icon" class="techIMG">
+            <p class="divText">Swift</p>
+          </div>
+          <div class="technologies">
+            <img src="img/flutterIcon.png" alt="flutter-Icon" class="techIMG">
+            <p class="divText">Flutter</p>
+          </div>
         </div>
       </div>
 
@@ -77,7 +78,7 @@
         <br>
         <br>
         <h3>Project portfolio</h3>
-
+        <br>
       </div>
 
       <br>
@@ -88,27 +89,31 @@
         <br>
         <br>
         <h3>Services</h3>
-        <div class="services">
-          <p class="divText">App Development</p>
-          <ul>
-            <li>Metting to plan the project.</li>
-            <li>Create a requirements project document.</li>
-            <li>Desing of the app.</li>
-            <li>Coding time.</li>
-            <li>Unit testing.</li>
-            <li>App presentacion.</li>
-          </ul>
-        </div>
-        <div class="services">
-          <p class="divText">Maintenance</p>
-          <ul>
-            <li>Metting to plan the project.</li>
-            <li>Create a requirements project document.</li>
-            <li>Desing the new apperance.</li>
-            <li>Coding time.</li>
-            <li>Unit testing.</li>
-            <li>App presentacion.</li>
-          </ul>
+        <div class="servicesCards">
+          <div class="services">
+            <p class="divText"><strong>App Development</strong></p>
+            <ul>
+              <li>Metting to plan the project.</li>
+              <li>Create a requirements project document.</li>
+              <li>Desing of the app.</li>
+              <li>Coding time.</li>
+              <li>Unit testing.</li>
+              <li>App presentacion.</li>
+            </ul>
+            <br>
+          </div>
+          <div class="services">
+            <p class="divText"><strong>Maintenance</strong></p>
+            <ul>
+              <li>Metting to plan the project.</li>
+              <li>Create a requirements project document.</li>
+              <li>Desing new apperance.</li>
+              <li>Coding time.</li>
+              <li>Unit testing.</li>
+              <li>App presentacion.</li>
+            </ul>
+            <br>
+          </div>
         </div>
       </div>
 
@@ -121,6 +126,7 @@
         <br>
         <h3>Where you can find me?</h3>
         <p>Here is where we can talk about the project.</p>
+        <br>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3761.5511749729967!2d-99.0482946540427!3d19.47490857952386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1fb1ae7b9f1c7%3A0x501a154bf16c02f1!2sFacultad%20de%20Estudios%20Superiores%20Arag%C3%B3n%20UNAM!5e0!3m2!1sen!2smx!4v1592864694959!5m2!1sen!2smx" width="100%" height="500" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </div>
 
@@ -131,11 +137,16 @@
         <br>
         <br>
         <h3>Contact me</h3>
-        <p class="miniIconText"><img src="img/facebookIcon.png" alt="facebook.Icon" class="miniIcon"> Facebook: <a href="https://www.facebook.com/YaelBCBY" class="contactLink">Yael Castillo</a></p>
         <br>
-        <p class="miniIconText"><img src="img/celIcon.png" alt="cell-Icon" class="miniIcon"> Tel: 55-19-45-44-93</p>
+        <p class="miniIconText"><i class="fab fa-facebook-square"></i>Facebook:<a href="https://www.facebook.com/YaelBCBY" class="contactLink">Yael Castillo</a></p>
         <br>
-        <p class="miniIconText"><img src="img/telIcon.png" alt="phone-Icon" class="miniIcon"> Cel: 55-38-95-60-13</p>
+        <p class="miniIconText"><i class="fas fa-phone-square-alt"></i>Tel: 55-19-45-44-93</p>
+        <br>
+        <p class="miniIconText"><i class="fas fa-mobile-alt"></i>Cel: 55-38-95-60-13</p>
+        <br>
+        <p class="miniIconText"><i class="fas fa-envelope"></i>Gmail: yaelaram14@gmail.com</p>
+        <br>
+        <p class="miniIconText"><i class="fas fa-envelope"></i>Outlook: yaelaram14@outlook.com</p>
       </div>
     </div>
 
@@ -145,5 +156,6 @@
 
     <link rel="stylesheet" type="text/css" href="CSS/StyleIndex.css"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto Condensed' rel='stylesheet'>
+    <script src="https://kit.fontawesome.com/386a759980.js" crossorigin="anonymous"></script>
   </body>
 </html>
